--- a/index-2.html
+++ b/index-2.html
@@ -20,7 +20,7 @@
       render(){
         return(
           <div>
-            <p>GrandChildComponent</p>
+            <p>GrandChildComponent : {this.props.myProp}</p>
           </div>
         )
       }
