add comment on index1 app

--- a/index-1.html
+++ b/index-1.html
@@ -22,6 +22,7 @@
         super();
         this.state = {
           input:'',
+          // to store the data which add to input
           todos:[],
         }
       }
