--- a/counter.html
+++ b/counter.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Counter App</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-  <script src="main.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.6.3/umd/react.production.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.6.3/umd/react-dom.production.min.js"></script>
 </head>
+
 <body>
   <div id="app"></div>
   <script type="text/babel">
@@ -16,30 +19,30 @@
         super();
         // init state
         this.state = {
-          count: 0
+          count: 0,
         };
       }
 
       increment(){
-        this.setState(
-          {
-            // increment Counter
-            count: this.state.count + 1
-          }
-        );
+        this.setState({
+          // increment Counter
+          count: this.state.count + 1
+        });
+        console.log('clicked!');
       }
       
       render(){
         return(
           <div>
-            <h1>{this.state.count `has been clicked.`}</h1>
+            <h1>{this.state.count + " times button has been clicked."}</h1>
             {/* below equals <onClick="function()"> */}
-            <button onClick={()=> this.increment}>Click me</button>
+            <button onClick={()=> this.increment()}>Click me</button>
           </div>
         )
       }
     }
-    ReactDOM.render(<App/>, document.querySelector("#app");)
+    ReactDOM.render(<App/>, document.querySelector("#app"))
   </script>
 </body>
+
 </html>
